--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -6,6 +6,8 @@ server {
     root /home/lucas/www/fatty-big-star;
     index index.html;
 
+    rewrite ^/help/?$ /docs/help.txt permanent;
+
     # Set expires max on static file types
     # location ~* ^.+\.(css|js|jpg|jpeg|gif|png|ico|gz|svg|svgz|ttf|otf|woff|eot|mp4|ogg|ogv|webm)$ {
     #   expires max;
