--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -1,25 +1,28 @@
+upstream gunicorn-fatty-highscores { 
+    server 127.0.0.1:8046;
+}
+
 server {
     listen      192.241.199.61:80;
     server_name fatty.lucasou.com;
     access_log off;
 
     root /home/lucas/www/fatty-big-star;
-    index index.html;
 
     rewrite ^/help/?$ /docs/help.txt permanent;
 
-    # Set expires max on static file types
-    # location ~* ^.+\.(css|js|jpg|jpeg|gif|png|ico|gz|svg|svgz|ttf|otf|woff|eot|mp4|ogg|ogv|webm)$ {
-    #   expires max;
-    #   root /home/lucas/www/fatty-big-star;
-    #   access_log off;
-    # }
+    proxy_next_upstream error;
+    add_header "X-UA-Compatible" "IE=Edge,chrome=1"; 
 
-    # error_page 500 502 503 504 /500.html;
-    # error_page 404 /404.html;
+    location @gunicorn-fatty-highscores { 
+        proxy_pass http://gunicorn-fatty-highscores; 
+        proxy_set_header X-Forwarded-Host $server_name; 
+        proxy_set_header X-Real-IP $remote_addr;
+        add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"'; 
+    }
 
     # Try to serve static files
-    try_files $uri $uri/ =404;
+    try_files $uri $uri/ @gunicorn-fatty-highscores;
 }
 
 server {
