--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -4,7 +4,7 @@ upstream gunicorn-fatty-highscores {
 
 server {
     listen      192.241.199.61:80;
-    server_name fatty.lucasou.com;
+    server_name fatty.codelucas.com;
     access_log off;
 
     root /home/lucas/www/fatty-big-star;
@@ -27,6 +27,6 @@ server {
 
 server {
     listen      192.241.199.61:80;
-    server_name fatty.codelucas.com;
-    rewrite ^   http://fatty.lucasou.com$request_uri permanent;
+    server_name www.fatty.codelucas.com;
+    rewrite ^   http://fatty.codelucas.com$request_uri permanent;
 }
